fixed spacing

--- a/frontend/src/pages/ProfilePage.module.css
+++ b/frontend/src/pages/ProfilePage.module.css
@@ -25,7 +25,7 @@
 
 @media (min-width: 1024px) {
   .grid {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 }
 
@@ -162,7 +162,7 @@
 
 @media (min-width: 1024px) {
   .savedEventsColumn {
-    grid-column: span 1 / span 1;
+    grid-column: span 3 / span 3;
   }
 }
 
